new file:   .env 	modified:   .gitignore 	modified:   helio-pg/Cargo.toml 	new file:   helio-pg/diesel.toml 	new file:   helio-pg/migrations/.keep 	new file:   helio-pg/migrations/00000000000000_diesel_initial_setup/down.sql 	new file:   helio-pg/migrations/00000000000000_diesel_initial_setup/up.sql 	new file:   helio-pg/migrations/2024-10-11-120327_create_tables/down.sql 	new file:   helio-pg/migrations/2024-10-11-120327_create_tables/up.sql 	modified:   helio-pg/src/lib.rs 	new file:   helio-pg/src/models/instance.rs 	new file:   helio-pg/src/models/mod.rs 	new file:   helio-pg/src/schema.rs

--- a/helio-pg/Cargo.toml
+++ b/helio-pg/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2021"
 
 [dependencies]
 dotenvy = "0.15"
-diesel = { version = "2.2.0", features = ["postgres"] }
+diesel = { version = "2.2.0", features = ["chrono", "postgres", "r2d2", "serde_json"] }
+chrono = { version = "0.4.38", features = ["serde"] }
