--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@ Cargo.lock
 
 devenv
 
+.env
+
 # RustRover
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
