--- a/helio-pg/Cargo.toml
+++ b/helio-pg/Cargo.toml
@@ -6,4 +6,6 @@ edition = "2021"
 [dependencies]
 dotenvy = "0.15"
 diesel = { version = "2.2.0", features = ["chrono", "postgres", "r2d2", "serde_json"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 chrono = { version = "0.4.38", features = ["serde"] }
