--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = [ "helio-pg", "helio-server", "helio-cloudinit" ]
+members = [ "helio-pg", "helio-server", "helio-cloudinit" , "helio-dhcp" ]
