--- a/helio-cloudinit/Cargo.toml
+++ b/helio-cloudinit/Cargo.toml
@@ -5,3 +5,6 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
+
+helio-pg = { path = "../helio-pg" }
+chrono = { version = "0.4.38", features = ["serde"] }
