--- a/helio-dhcp/Cargo.toml
+++ b/helio-dhcp/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 dhcproto = "0.12"
 nix = { version = "0.29", features = ["socket"] }
 tokio = { version = "1", features = ["full"] }
+
+helio-pg = { path = "../helio-pg" }
+chrono = { version = "0.4.38", features = ["serde"] }
