new file:   helio-bot/.vscode/extensions.json 	new file:   helio-bot/.vscode/settings.json 	new file:   helio-bot/.yarn/sdks/integrations.yml 	new file:   helio-bot/.yarn/sdks/typescript/bin/tsc 	new file:   helio-bot/.yarn/sdks/typescript/bin/tsserver 	new file:   helio-bot/.yarn/sdks/typescript/lib/tsc.js 	new file:   helio-bot/.yarn/sdks/typescript/lib/tsserver.js 	new file:   helio-bot/.yarn/sdks/typescript/lib/tsserverlibrary.js 	new file:   helio-bot/.yarn/sdks/typescript/lib/typescript.js 	new file:   helio-bot/.yarn/sdks/typescript/package.json 	modified:   helio-bot/package.json 	modified:   helio-bot/src/index.ts 	new file:   helio-bot/src/proto/google/protobuf/empty.ts 	new file:   helio-bot/src/proto/rpc.client.ts 	new file:   helio-bot/src/proto/rpc.ts 	modified:   helio-dhcp/Cargo.toml 	modified:   helio-dhcp/src/main.rs 	modified:   helio-pg/migrations/2024-10-11-120327_create_tables/down.sql 	modified:   helio-pg/migrations/2024-10-11-120327_create_tables/up.sql 	modified:   helio-pg/src/lib.rs 	modified:   helio-pg/src/models/instance.rs 	modified:   helio-pg/src/schema.rs 	modified:   helio-server/Cargo.toml 	modified:   helio-server/build.rs 	deleted:    helio-server/proto/rpc.proto 	modified:   helio-server/src/main.rs 	modified:   helio-server/src/qemu_kvm/mod.rs 	new file:   install.sh 	new file:   proto/rpc.proto 	deleted:    setup.sh

--- a/helio-bot/package.json
+++ b/helio-bot/package.json
@@ -6,7 +6,7 @@
   "packageManager": "yarn@4.5.0",
   "scripts": {
     "build": "tsc -p . && tsc-alias",
-    "build:proto": "yarn dlx protoc --ts_out ./src/proto --proto_path ./src/proto ./src/proto/user.proto",
+    "build:proto": "yarn dlx protoc --ts_out ./src/proto --proto_path ../proto ../proto/rpc.proto",
     "start": "node ./dist/index.js | pino-pretty",
     "dev": "DEV=1 ts-node-dev --respawn --transpile-only -r tsconfig-paths/register ./src/index.ts | pino-pretty",
     "dev:test": "DEV=1 ts-node-dev --respawn --transpile-only -r tsconfig-paths/register ./src/test.ts | pino-pretty"
