--- a/helio-dhcp/Cargo.toml
+++ b/helio-dhcp/Cargo.toml
@@ -4,9 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+dotenvy = "0.15"
 dhcproto = "0.12"
 nix = { version = "0.29", features = ["socket"] }
 tokio = { version = "1", features = ["full"] }
+iptables = "0.5.2"
+rand = "0.8.5"
 
 helio-pg = { path = "../helio-pg" }
 chrono = { version = "0.4.38", features = ["serde"] }
