--- a/helio-server/Cargo.toml
+++ b/helio-server/Cargo.toml
@@ -13,6 +13,7 @@ chrono = { version = "0.4.38", features = ["serde"] }
 tokio = { version = "1", features = ["full"] }
 iptables = "0.5.2"
 serde_json = { version = "1.0.128" }
+rand = "0.8.5"
 
 [build-dependencies]
 tonic-build = "0.12.3"
