modified:   helio-bot/package.json 	modified:   helio-bot/src/index.ts 	new file:   helio-bot/src/proto/google/protobuf/timestamp.ts 	modified:   helio-bot/src/proto/rpc.client.ts 	modified:   helio-bot/src/proto/rpc.ts 	modified:   helio-bot/yarn.lock 	modified:   helio-cloudinit/src/main.rs 	modified:   helio-dhcp/src/main.rs 	modified:   helio-pg/src/models/instance.rs 	modified:   helio-server/Cargo.toml 	modified:   helio-server/src/main.rs 	deleted:    helio-server/src/qemu_disk/mod.rs 	modified:   helio-server/src/qemu_kvm/mod.rs 	modified:   hve-server.service 	modified:   install.sh 	modified:   proto/rpc.proto

--- a/helio-bot/package.json
+++ b/helio-bot/package.json
@@ -17,9 +17,11 @@
     "@protobuf-ts/plugin": "^2.9.4",
     "@protobuf-ts/runtime": "^2.9.4",
     "@protobuf-ts/runtime-rpc": "^2.9.4",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/uuid": "^10",
     "@yarnpkg/pnpify": "^4.1.2",
     "pino-pretty": "^11.2.2",
     "ts-node-dev": "^2.0.0",
