--- a/helio-server/Cargo.toml
+++ b/helio-server/Cargo.toml
@@ -14,6 +14,7 @@ tokio = { version = "1", features = ["full"] }
 iptables = "0.5.2"
 serde_json = { version = "1.0.128" }
 rand = "0.8.5"
+sysinfo = "0.32.0"
 
 [build-dependencies]
 tonic-build = "0.12.3"
