--- a/hve-server.service
+++ b/hve-server.service
@@ -1,18 +1,16 @@
 [Unit]
-Description=HVE guests
+Description=HVE server
 After=network.target
 Wants=network-online.target
 
 [Service]
 Restart=always
 Type=simple
-PIDFile=/opt/helio-ve/var/main.pid
-ExecStart=/opt/helio-ve/bin/main
+PIDFile=/etc/helio/pids/server.pid
+ExecStart=/etc/helio/bin/helio-server
 ExecStop=kill -s SIGEXIT $(cat /opt/helio-ve/var/main.pid)
 Environment='PORT=8080'
 
 [Install]
 WantedBy=multi-user.target
-Alias=helio-ve.service 
-
-# /etc/systemd/system/hve-manager.service
+Alias=helio-server.service 
