--- a/helio-cloudinit/Cargo.toml
+++ b/helio-cloudinit/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+dotenvy = "0.15"
 actix-web = "4"
+env_logger = "0.11.5"
 
 helio-pg = { path = "../helio-pg" }
 chrono = { version = "0.4.38", features = ["serde"] }
