modified:   helio-bot/src/index.ts 	modified:   helio-cloudinit/src/main.rs 	modified:   helio-dhcp/src/main.rs 	modified:   helio-server/src/main.rs 	new file:   hve-cloudinit.service 	new file:   hve-dhcp.service 	modified:   hve-server.service 	modified:   install.sh

--- a/hve-server.service
+++ b/hve-server.service
@@ -8,7 +8,7 @@ Restart=always
 Type=simple
 PIDFile=/etc/helio/pids/server.pid
 ExecStart=/etc/helio/bin/helio-server
-ExecStop=kill -s SIGEXIT $(cat /opt/helio-ve/var/main.pid)
+ExecStop=kill -s SIGEXIT $(cat /etc/helio/pids/server.pid)
 Environment='PORT=8080'
 
 [Install]
