modified:   Cargo.toml 	deleted:    direct.xml 	deleted:    helio-bot/.gitignore 	deleted:    helio-bot/.vscode/extensions.json 	deleted:    helio-bot/.vscode/settings.json 	deleted:    helio-bot/.yarn/releases/yarn-4.5.0.cjs 	deleted:    helio-bot/.yarn/sdks/integrations.yml 	deleted:    helio-bot/.yarn/sdks/typescript/bin/tsc 	deleted:    helio-bot/.yarn/sdks/typescript/bin/tsserver 	deleted:    helio-bot/.yarn/sdks/typescript/lib/tsc.js 	deleted:    helio-bot/.yarn/sdks/typescript/lib/tsserver.js 	deleted:    helio-bot/.yarn/sdks/typescript/lib/tsserverlibrary.js 	deleted:    helio-bot/.yarn/sdks/typescript/lib/typescript.js 	deleted:    helio-bot/.yarn/sdks/typescript/package.json 	deleted:    helio-bot/.yarnrc.yml 	new file:   helio-bot/Cargo.toml 	new file:   helio-bot/build.rs 	deleted:    helio-bot/package.json 	deleted:    helio-bot/src/index.ts 	new file:   helio-bot/src/main.rs 	deleted:    helio-bot/src/proto/google/protobuf/empty.ts 	deleted:    helio-bot/src/proto/google/protobuf/timestamp.ts 	deleted:    helio-bot/src/proto/rpc.client.ts 	deleted:    helio-bot/src/proto/rpc.ts 	deleted:    helio-bot/tsconfig.json 	deleted:    helio-bot/yarn.lock 	modified:   helio-cloudinit/src/main.rs 	modified:   helio-dhcp/src/main.rs 	modified:   helio-pg/src/lib.rs 	modified:   helio-server/src/main.rs 	modified:   hve-cloudinit.service 	modified:   hve-dhcp.service 	modified:   hve-server.service 	new file:   system_install.sh 	renamed:    install.sh -> system_setup.sh

--- a/hve-cloudinit.service
+++ b/hve-cloudinit.service
@@ -9,7 +9,7 @@ Type=simple
 PIDFile=/etc/helio/pids/cloudinit.pid
 ExecStart=/etc/helio/bin/helio-cloudinit
 ExecStop=kill -s SIGEXIT $(cat /etc/helio/pids/cloudinit.pid)
+Environment='DATABASE_URL=postgres://postgres:6e2115148f4ba7e80ca0ce786d17c64f@localhost:5432/helio'
 
 [Install]
 WantedBy=multi-user.target
-Alias=helio-cloudinit.service 
