modified:   .gitignore 	modified:   helio-bot/Cargo.toml 	new file:   helio-bot/src/commands/list.rs 	new file:   helio-bot/src/commands/mod.rs 	modified:   helio-bot/src/main.rs 	modified:   helio-server/src/main.rs 	modified:   proto/rpc.proto

--- a/helio-bot/Cargo.toml
+++ b/helio-bot/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-serenity = "0.12"
+serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model", "collector"] }
 tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
 
 tonic = "0.12.3"
