modified:   Cargo.toml 	renamed:    helio-bot/Cargo.toml -> helio-ui/Cargo.toml 	renamed:    helio-bot/build.rs -> helio-ui/build.rs 	renamed:    helio-bot/src/commands/list.rs -> helio-ui/src/commands/list.rs 	renamed:    helio-bot/src/commands/mod.rs -> helio-ui/src/commands/mod.rs 	renamed:    helio-bot/src/commands/start.rs -> helio-ui/src/commands/start.rs 	renamed:    helio-bot/src/main.rs -> helio-ui/src/main.rs 	new file:   hve-ui.service

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = [ "helio-pg", "helio-server", "helio-cloudinit" , "helio-dhcp" , "helio-bot" ]
+members = [ "helio-pg", "helio-server", "helio-cloudinit" , "helio-dhcp" , "helio-ui" ]
