--- a/helio-ui/Cargo.toml
+++ b/helio-ui/Cargo.toml
@@ -11,5 +11,7 @@ tonic = "0.12.3"
 prost = "0.13.3"
 prost-types = "0.13.3"
 
+uuid = { version = "1.10.0", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
+
 [build-dependencies]
 tonic-build = "0.12.3"
